--- a/sections/ab-rfc.adoc
+++ b/sections/ab-rfc.adoc
@@ -1,7 +1,7 @@
 
 [[annex-b-rfc-process-outline-full-ogc-standard]]
 [appendix,obligation=informative]
-== Annex B: RFC Process Outline: Full OGC Standard
+== RFC Process Outline: Full OGC Standard
 
 [cols=",",options="header",]
 |======================================================================================
@@ -49,7 +49,7 @@
 |Vote completes |
 |Announcement to OGC Members |TCC
 |Planning Committee Approval |TCC and PC
-|SWG process any comments reveived during the adoption vote |SWG
+|SWG process any comments received during the adoption vote |SWG
 |SWG updates Change Request status for each CR processed |SWG
 |Confirm list of contributors |TCC and SWG Chair
 |TCC does final review of adopted standard |TCC
