--- a/sections/05-voting.adoc
+++ b/sections/05-voting.adoc
@@ -120,7 +120,10 @@ Except for the following reasons, an electronic vote shall remain open for the d
 [[eligibility]]
 ==== Eligibility
 
-All Voting TC Members footnote:[The total of Strategic, Principal, Technical, and Technical Aggregate Members] in good standing at any time during the electronic vote can participate in electronic voting, whether or not they have participated in any preceding TC meeting or electronic vote. All such Members are referred to as "Eligible Voters." Each Eligible Voter shall have one vote.
+All Voting TC Members in good standing at any time during the electronic vote can participate in electronic voting, whether or not they have participated in any preceding TC meeting or electronic vote. All such Members are referred to as "Eligible Voters." Each Eligible Voter shall have one vote.
+
+NOTE: All Voting TC Members are the total of Strategic, Principal, Technical, and Technical Aggregate Members.
+
 
 [[number-of-eligible-voters]]
 ==== Number of Eligible Voters
@@ -155,7 +158,7 @@ Any Eligible Voter that votes may submit a written comment. If an Eligible Voter
 [[withdrawal]]
 ==== Withdrawal
 
-A motion may only be withdrawn by the Working Group footnote:[Except for votes initiated by the TCC, such as the election of OAB members.] that made the original motion or by the TCC for procedural reasons. The WG shall have a formal documented vote to withdraw a motion. The reasons for withdrawing a motion are not constrained. The WG shall communicate to the TCC the request to withdraw a motion. The TCC shall then communicate the decision to withdraw a motion to the entire Membership.
+A motion may only be withdrawn by the Working Group (except for votes initiated by the TCC, such as the election of OAB members) that made the original motion or by the TCC for procedural reasons. The WG shall have a formal documented vote to withdraw a motion. The reasons for withdrawing a motion are not constrained. The WG shall communicate to the TCC the request to withdraw a motion. The TCC shall then communicate the decision to withdraw a motion to the entire Membership.
 
 [[restarting-a-vote]]
 ==== Restarting a vote
@@ -200,7 +203,7 @@ The procedures for holding electronic votes (e-votes) presented in this section 
 * Has an email reflector on the OGC Portal on which all voting members are subscribed; and
 * Has a quorum rule on votes, or a rule that requires a notice to the TC at large of the type of vote being contemplated.
 
-In the event that a motion is made either on the email reflector of a subgroup or in some other scheduled meeting of the subgroup (that lacks quorum and thus cannot act directly), then the chair (or presiding officer of the meeting if the elected chair is not present) may call for a Portal vote as a “measures to obtain a quorum” (RONR, 11th Edition, §40, pages 347-348). The procedure will be as follows.
+In the event that a motion is made either on the email reflector of a subgroup or in some other scheduled meeting of the subgroup (that lacks quorum and thus cannot act directly), then the chair (or presiding officer of the meeting if the elected chair is not present) may call for a Portal vote as a “measures to obtain a quorum” (<<RONR,section=40,pages="347-348">>). The procedure will be as follows.
 
 1.  A motion is made and seconded on the subgroup's email reflector or during a meeting (such as a teleconference) that may not have a quorum.[multiblock footnote omitted]
 2.  The chair (or the presiding person at the meeting where the motion was made in conjunction with one of the subgroup’s elected chairs) announces that a Portal e-vote will be taken and summarizes the procedure to be used. This summary includes an opening date (usually immediately or within one week after the motion is made) and a closing date at least one full week after the opening, making the vote last at least 8 calendar days (such as a Monday to Monday schedule).
@@ -218,12 +221,12 @@ This procedure shall not be used to suspend the rules or to amend any motion mad
 [[tc-or-subgroups-of-the-tc-email-voting]]
 === TC or Subgroups of the TC Email Voting
 
-The procedures for holding email votes presented in this section apply to any votes that the TC is eligible to hold in a Closing Plenary or any subgroup of the TC that meets the criteria for holding electronic votes as defined in Section 6.6. Note that use of the Portal electronic voting function is preferred over the use of email voting procedures.
+The procedures for holding email votes presented in this section apply to any votes that the TC is eligible to hold in a Closing Plenary or any subgroup of the TC that meets the criteria for holding electronic votes as defined in <<subgroups-of-the-tc-electronic-voting>>. Note that use of the Portal electronic voting function is preferred over the use of email voting procedures.
 
-Email votes follow the same process as laid out for TC votes in the TC Meeting (see Section 6.4) or for subgroups of the TC electronic voting (see Section 6.6), with the following additional procedures.
+Email votes follow the same process as laid out for TC votes in the TC Meeting (see <<voting-at-tc-meetings>>) or for subgroups of the TC electronic voting (see <<subgroups-of-the-tc-electronic-voting>>), with the following additional procedures.
 
-1.  The TCC or subgroup chair sends an email to the appropriate reflector notifying the group of the start of an email vote. The message must specify the item(s) on which the group is voting, include relevant background information, provide the deadline for voting, and define the type of vote (“Hand” or “No Objection”).
+. The TCC or subgroup chair sends an email to the appropriate reflector notifying the group of the start of an email vote. The message must specify the item(s) on which the group is voting, include relevant background information, provide the deadline for voting, and define the type of vote (“Hand” or “No Objection”).
 
-2.  “Hand” vote: voting members email the reflector (from the email address listed for the corresponding Portal user) with the vote clearly mentioned in the first few lines of the mail, and optionally in the subject line. Allowed votes are YES, NO, or ABSTAIN. The subject line should include the formal name of the subject of the vote used by the chair in the announcement. A member may change their vote by emailing again at any time before the close of the vote. The last vote cast by the member before the closing date and time is that member’s official vote.
+. [[tc-hand-vote]] “Hand” vote: voting members email the reflector (from the email address listed for the corresponding Portal user) with the vote clearly mentioned in the first few lines of the mail, and optionally in the subject line. Allowed votes are YES, NO, or ABSTAIN. The subject line should include the formal name of the subject of the vote used by the chair in the announcement. A member may change their vote by emailing again at any time before the close of the vote. The last vote cast by the member before the closing date and time is that member’s official vote.
 
-3.  “No Objection” vote: an email vote may consist of a request to the group members for any objection to unanimous consent. Voters with no objection to the ballot do not need to email the chair or reply to the vote announcement. Should there be an objection, the vote will be paused and the objection discussed in the reflector or in a meeting. If the objection is addressed to the satisfaction of the objecting party, the vote will continue for the number of days remaining in the vote from the date at which the vote was paused. If the objection is not removed, then the vote will restart as either a “Hand” vote (see 2 above) or a Portal e-vote.
+. “No Objection” vote: an email vote may consist of a request to the group members for any objection to unanimous consent. Voters with no objection to the ballot do not need to email the chair or reply to the vote announcement. Should there be an objection, the vote will be paused and the objection discussed in the reflector or in a meeting. If the objection is addressed to the satisfaction of the objecting party, the vote will continue for the number of days remaining in the vote from the date at which the vote was paused. If the objection is not removed, then the vote will restart as either a “Hand” vote (see <<tc-hand-vote>>) or a Portal e-vote.
