--- a/sections/07-document-types.adoc
+++ b/sections/07-document-types.adoc
@@ -14,22 +14,22 @@ Policy documents have version numbers that shall start at 1.0
 [[the-standards-document]]
 === The Standards Document
 
-An OGC standards document is the principal document type that captures the work and the consensus of the OGC membership. Standards documents must use the OGC standards document template (with the exception of Community standards footnote:[While there is not a formal requirement for a Community standard to use the OGC document template for a standard the OGC encourages the Candidate standard submission team to consider using the OGC document template.]) that can be downloaded in Word format from: https://portal.opengeospatial.org/?m=public&subtab=templates&tab=1 or which is available in the OGC GitHub repository as a series of AsciiDoc files.
+An OGC standards document is the principal document type that captures the work and the consensus of the OGC membership. Standards documents must use the OGC standards document template (with the exception of Community standards) that can be downloaded in Word format from: <<OGCPortalTemplates>> or which is available in the OGC GitHub repository as a series of AsciiDoc files.
+
+NOTE: While there is not a formal requirement for a Community standard to use the OGC document template for a standard the OGC encourages the Candidate standard submission team to consider using the OGC document template.
 
 OGC uses a multi-track standards policy with three possible states: OGC Community standard, OGC standard, and OGC standard with Compliance Suite. These are described in <<the-two-track-standards-process-characteristics>>.
 
 Approval of an OGC standard is described in <<policies-and-procedures-for-adoption-andor-revisions-of-standards>>.
 
-Each standard distributed by the OGC shall include a cover page with the statement as specified in https://portal.opengeospatial.org/public_ogc/directives/directives.php[Policy Directive 4].
+Each standard distributed by the OGC shall include a cover page with the statement as specified in <<OGCDIR,clause=4>>.
 
 Standards documents have version numbers that shall start at 1.0.
 
 [[the-ogc-reference-model]]
 === The OGC Reference Model
 
-The TC will periodically be asked to review and vote on the OGC Reference Model (ORM) Document. The ORM describes a framework for the ongoing work of the OGC and our standards and implementing interoperable solutions and applications for geospatial services, data, and applications. The ORM can be found at:
-
-http://www.opengeospatial.org/standards/orm
+The TC will periodically be asked to review and vote on the OGC Reference Model (ORM) Document. The ORM describes a framework for the ongoing work of the OGC and our standards and implementing interoperable solutions and applications for geospatial services, data, and applications. The ORM can be found at <<OGCORM>>.
 
 Any version of the ORM, once approved by the TC and the PC, is released as a public document.
 
@@ -40,7 +40,7 @@ WGs and SCs shall often be used to hear presentations in their interest area. Fu
 
 Motions to approve release of a document as a Discussion Paper may originate from a WG or SC with TC approval, from a motion at a TC Plenary, or from a motion by the TCC.
 
-While these Discussion Papers shall be distributed by the OGC, and might in fact lead to adopted standards later, they do not represent an official position of the OGC TC or the OGC itself. Each Discussion Paper distributed by the OGC shall include a cover page with the statement as specified in https://portal.opengeospatial.org/public_ogc/directives/directives.php[Policy Directive 5].
+While these Discussion Papers shall be distributed by the OGC, and might in fact lead to adopted standards later, they do not represent an official position of the OGC TC or the OGC itself. Each Discussion Paper distributed by the OGC shall include a cover page with the statement as specified in <<OGCDIR,clause=5>>.
 
 Discussion Papers do not have a version number.
 
@@ -53,7 +53,7 @@ While these ERs shall be distributed by the OGC, and might in fact lead to adopt
 
 Motions to approve release of a document as an Engineering Report may originate from a WG with TC approval, from a motion at a TC Plenary, or from a motion by the TCC.
 
-Each Public Engineering Report distributed by the OGC shall include a cover page with the statement as specified in https://portal.opengeospatial.org/public_ogc/directives/directives.php[Policy Directive 6].
+Each Public Engineering Report distributed by the OGC shall include a cover page with the statement as specified in <<OGCDIR,clause=6>>.
 
 Engineering Reports do not have a version number.
 
@@ -83,21 +83,28 @@ A BP vote has the same rules as a standards adoption vote (<<tc-electronic-votin
 
 The BP document authors shall respond in writing (email is acceptable) to any comments received during the voting period. If necessary, the document authors shall edit the document. If the TCC deems that the edits to the document are more than editorial, then the document shall be posted to pending and a new BP approval e-vote shall be initiated.
 
-Each Best Practice Paper distributed by the OGC shall include a cover page with the statement as specified in https://portal.opengeospatial.org/public_ogc/directives/directives.php[Policy Directive 7].
+Each Best Practice Paper distributed by the OGC shall include a cover page with the statement as specified in <<OGCDIR,clause=7>>.
+
 
 [[documents-and-distribution]]
 === Documents and Distribution
 
 The numbered document (see <<document-numbers>>) as distributed to members is to be considered the official document of the TC. Electronic mail shall be used for day-to-day discussion of OGC documents. The preferred mechanism for document sharing is the OGC Members-only Portal. OGC Communication shall be used for announcing the availability of new official documents. The actual documents will not be distributed by email unless a member requests receiving a document by email. All official documents will be posted to the Portal. Other electronic forms of documents can be made available at the written request of members.
 
-The Members section of the OGC Portal (http://portal.opengeospatial.org) shall provide the default method of disseminating documents in electronic form. The TCC or his designee shall determine the electronic distribution format footnote:[Typically, official documents are provided to the public in Word “.doc” format or Adobe PDF format. However, various presentations, draft documents, and so forth can also be distributed in PowerPoint format, HTML, and other formats as provided by the Members. The TCC reserves the right to reject a document that is in a non-industry standard distribution format.] of these documents. RFC proposals, Discussion Papers, Best Practices Documents, and Engineering Reports must be provided in one of the formats defined in <<other-document-concerns>>. However, the preferred document format is the Word .doc format. The format for dissemination may change as distribution technology changes. Up until mid 2014, all approved Abstract Specification Topics and standards were only available in PDF format. Please note that the OGC has moved to publication of OGC standards documents in HTML footnote:[Initial publications in 2014.].
+The Members section of the OGC Portal (<<OGCPortal>>) shall provide the default method of disseminating documents in electronic form. The TCC or his designee shall determine the electronic distribution format of these documents.
+
+NOTE: Typically, official documents are provided to the public in Word `.doc` format or Adobe PDF format. However, various presentations, draft documents, and so forth can also be distributed in PowerPoint format, HTML, and other formats as provided by the Members. The TCC reserves the right to reject a document that is in a non-industry standard distribution format.
+
+RFC proposals, Discussion Papers, Best Practices Documents, and Engineering Reports must be provided in one of the formats defined in <<other-document-concerns>>. However, the preferred document format is the Word `.doc` format. The format for dissemination may change as distribution technology changes.
+
+Up until mid 2014, all approved Abstract Specification Topics and standards were only available in PDF format. Please note that the OGC has moved to publication of OGC standards documents in HTML (initial publications in 2014).
 
 [[document-numbers]]
 ==== Document Numbers
 
-All member submitted documents shall be assigned a document number. Members can obtain pending document numbers using the members only Portal, OGC Pending Documents page located at https://portal.opengeospatial.org/?m=public&orderby=default&tab=1.
+All member submitted documents shall be assigned a document number. Members can obtain pending document numbers using the members only Portal, OGC Pending Documents page located at <<OGCPortalHome>>.
 
-Instructions for obtaining a Pending Document number and posting the document can be found at https://portal.opengeospatial.org/?m=public&subtab=instructions&tab=1.
+Instructions for obtaining a Pending Document number and posting the document can be found at <<OGCPortalInstructions>>.
 
 [[document-version-numbers]]
 ==== Document version numbers
@@ -110,7 +117,7 @@ The guidelines for version/revision numbers for documents are as follows.
 * Revisions to an adopted standard typically result in a change to the minor number. For example, the first revision to an adopted 1.0 standard would be 1.1.0. Minor revision releases should be 100% backwards compatible with the previous version.
 * Changes to the major version number are reserved for when there are significant changes to the adopted standard or when backwards compatibility cannot be maintained with the previous version.
 
-See also https://portal.opengeospatial.org/public_ogc/directives/directives.php[Policy Directive 18].
+See also <<OGCDIR,clause=18>>.
 
 [[change-proposal-format]]
 ==== Change Proposal Format
@@ -120,13 +127,17 @@ Change Proposals for any OGC document shall use the procedures and format as doc
 [[other-document-concerns]]
 ==== Other Document Concerns
 
-All documents with official OGC Document Numbers that are to be considered and discussed at a TC face to face meeting shall be made available electronically to all members at least three (3) weeks before the next TC meeting. However, this clause does not apply to informational documents for which there will not be any motions or actions. Numbered documents shall be posted to https://portal.opengeospatial.org/index.php?m=public&orderby=default&tab=1[Pending Documents].
+All documents with official OGC Document Numbers that are to be considered and discussed at a TC face to face meeting shall be made available electronically to all members at least three (3) weeks before the next TC meeting. However, this clause does not apply to informational documents for which there will not be any motions or actions. Numbered documents shall be posted to "`Pending Documents`" (<<OGCPortalHome>>).
 
 The TC will enforce this policy under the conditions described for the <<three-week-rule>>.
 
 All documents shall be made available in one or more of the following formats:
 
-* Microsoft Word including `.docx` footnote:[Microsoft provides conversion tools for backwards compatibility.] format (preferred),
+* Microsoft Word including `.docx` format (preferred),
+--
+NOTE: Microsoft provides conversion tools for backwards compatibility.
+--
+
 * Rich Text Format (RTF),
 * Portable Document Format (PDF),
 * Hypertext Markup Language (HTML),
@@ -151,11 +162,18 @@ This section provides the policy and procedure for retiring, deprecating, or res
 * The document is no longer valid due to new OGC documents being published; or
 * For a standard, no one is implementing the standard.
 
-At the one-year anniversary for a Discussion Paper, the two-year anniversary of a Public Engineering Report and at the three-year anniversary of any standards document footnote:[If a standards document is retired, any associated Best Practice document shall automatically be retired,], the OGC shall determine whether the document should be retired or remain an active Member document. The TCC shall compile a list of such documents prior to any OGC Face-to-Face meeting. The OGC Staff shall also compile download statistics. This information shall be compiled into a single document, posted to pending documents, and an announcement of availability broadcast to the Membership.
+At the one-year anniversary for a Discussion Paper, the two-year anniversary of a Public Engineering Report and at the three-year anniversary of any standards document , the OGC shall determine whether the document should be retired or remain an active Member document.
+
+NOTE: If a standards document is retired, any associated Best Practice document shall automatically be retired.
+
+The TCC shall compile a list of such documents prior to any OGC Face-to-Face meeting. The OGC Staff shall also compile download statistics. This information shall be compiled into a single document, posted to pending documents, and an announcement of availability broadcast to the Membership.
 
 For discussion papers, public engineering reports, and best practices, the TCC shall create a set of motions related to documents for consideration for retirement by the TC Membership. The form of the motion shall be:
 
-“The TCC recommends that OGC document <xyz> remain an active OGC document.”
+[quote]
+____
+The TCC recommends that OGC document <xyz> remain an active OGC document.
+____
 
 A positive vote indicates that the document shall not be retired. These motions shall be presented at the closing plenary at a TC meeting. Based on the results of the vote, the target documents shall either be retired or remain active.
 
@@ -169,15 +187,21 @@ Retired documents are not removed from the OGC public website. Instead, they are
 OGC policy documents may be deprecated by vote of the TC. A deprecated document is no longer supported, but is made available to the public on the OGC website and other resources.
 
 * In the case of Policies and Procedures, approval of a revision automatically deprecates the previous version.
-* Standards and Best Practices may be deprecated by vote of the TC. Deprecation must be preceded by a 60-day public comment period informing the community that the standard is proposed for deprecation and requesting evidence to support or reject deprecation. Any comments received during the public comment period must be presented to the TC during the request to deprecate the standard footnote:[The deprecation public comment period can start at any point prior to requesting approval of the revised standard. Such a review of the impact of deprecation should begin as soon as a SWG considers a revision that is intended to result in a deprecation of a standard.]. Where the document is proposed for deprecation because a new version of the document is to be approved, the deprecation vote may be part of the adoption vote for the new document. In this case, when the motion is made to the TC at a face-to-face meeting or email vote to approve the start of an electronic vote for a standard or Best Practice, that motion shall include a request to deprecate the previous version, if the previous version is recommended for deprecation by the WG. Where the document is proposed for deprecation and no future version is in consideration, then an electronic vote is required as described for <<retiring-ogc-documents>>.
+
+* Standards and Best Practices may be deprecated by vote of the TC. Deprecation must be preceded by a 60-day public comment period informing the community that the standard is proposed for deprecation and requesting evidence to support or reject deprecation. Any comments received during the public comment period must be presented to the TC during the request to deprecate the standard.
+--
+NOTE: The deprecation public comment period can start at any point prior to requesting approval of the revised standard. Such a review of the impact of deprecation should begin as soon as a SWG considers a revision that is intended to result in a deprecation of a standard.
+--
+
+Where the document is proposed for deprecation because a new version of the document is to be approved, the deprecation vote may be part of the adoption vote for the new document. In this case, when the motion is made to the TC at a face-to-face meeting or email vote to approve the start of an electronic vote for a standard or Best Practice, that motion shall include a request to deprecate the previous version, if the previous version is recommended for deprecation by the WG. Where the document is proposed for deprecation and no future version is in consideration, then an electronic vote is required as described for <<retiring-ogc-documents>>.
 
 [[rescinding-ogc-standards]]
 ===== Rescinding OGC standards
 
 OGC standards may be rescinded for three reasons:
 
-1.  The standard includes intellectual property that was unintentionally or illegally provided as part of the standard;
-2.  A Community standard is abandoned by its originating/maintaining party and the OGC membership does not take-over maintenance of that Community standard; or
-3.  A Community standard is judged by OGC membership to no longer be applicable to the OGC Mission.
+. The standard includes intellectual property that was unintentionally or illegally provided as part of the standard;
+. A Community standard is abandoned by its originating/maintaining party and the OGC membership does not take-over maintenance of that Community standard; or
+. A Community standard is judged by OGC membership to no longer be applicable to the OGC Mission.
 
 A standard is rescinded by electronic vote of the TC as described for <<retiring-ogc-documents>>.
