--- a/sections/08-adoption.adoc
+++ b/sections/08-adoption.adoc
@@ -11,11 +11,15 @@ Only Voting TC Members of the OGC may propose candidate standards for adoption b
 
 All adoption votes to approve a document as an OGC standard shall be electronic. Only Voting TC Members may vote on an adoption vote. However, any OGC member, regardless of membership level, can 1.) be part of a team submitting a candidate document and 2.) join a SWG and work on a candidate standard.
 
-The TC e-vote is to recommend to the PC approval of the results of an adoption vote. This will ensure that all TC voting members have the opportunity to vote on the most important work done by the Consortium. Lack of a vote does not count as a vote of Abstain; only an actual vote of Abstain counts as such a vote. footnote:[It is felt that this most important TC vote should encompass the entire Voting TC membership, rather than a portion of a meeting quorum, to allow all OGC Voting TC Members to have control over the issue. Note that the TCC does not cast a vote in the specification adoption process as the TCC vote may only be used in the case of a tie. Under the rules of the new OGC IPR policy, all Specification votes will be by electronic vote. As such, the entire TC voting membership will have the opportunity to vote.]
+The TC e-vote is to recommend to the PC approval of the results of an adoption vote. This will ensure that all TC voting members have the opportunity to vote on the most important work done by the Consortium. Lack of a vote does not count as a vote of Abstain; only an actual vote of Abstain counts as such a vote.
+
+NOTE: It is felt that this most important TC vote should encompass the entire Voting TC membership, rather than a portion of a meeting quorum, to allow all OGC Voting TC Members to have control over the issue. Note that the TCC does not cast a vote in the specification adoption process as the TCC vote may only be used in the case of a tie. Under the rules of the new OGC IPR policy, all Specification votes will be by electronic vote. As such, the entire TC voting membership will have the opportunity to vote.
 
 The policy of the OGC is that proposed standards resulting from an RFC evaluation may be recommended to the PC for acceptance conditional on certain changes to the standard, which the TC deems necessary, within a specified time frame.
 
-Acceptance of the TC recommendation for adoption is always with the caveat that the PC may verify that the standard's sponsor organization(s) is/are in a position to develop (or have developed for the sponsor organization) or commercialize an implementation of the standard. Further, for candidate standards developed external to the OGC and submitted into the OGC process, the PC may verify that the submitting organization has provided a duly executed submission of technology form. In addition, the TC recommends acceptance contingent on the PC’s finding that the sponsoring organization(s) makes the technology available as per the OGC Intellectual Property Policies and Procedures. footnote:[It was felt that it is not within the TC's purview to determine the ability or intent of an OGC member and technology sponsor to commercialize a technology. However, it was felt that the TC's work would be fruitless without such ability and intent. Therefore, recommendations to the PC shall implicitly or explicitly include such caveats.]
+Acceptance of the TC recommendation for adoption is always with the caveat that the PC may verify that the standard's sponsor organization(s) is/are in a position to develop (or have developed for the sponsor organization) or commercialize an implementation of the standard. Further, for candidate standards developed external to the OGC and submitted into the OGC process, the PC may verify that the submitting organization has provided a duly executed submission of technology form. In addition, the TC recommends acceptance contingent on the PC’s finding that the sponsoring organization(s) makes the technology available as per the OGC Intellectual Property Policies and Procedures.
+
+NOTE: It was felt that it is not within the TC's purview to determine the ability or intent of an OGC member and technology sponsor to commercialize a technology. However, it was felt that the TC's work would be fruitless without such ability and intent. Therefore, recommendations to the PC shall implicitly or explicitly include such caveats.
 
 [[the-two-track-standards-process-characteristics]]
 === The Two Track Standards Process: Characteristics
@@ -24,7 +28,7 @@ There are two possible tracks for proposing and approving candidate standards or
 
 [cols=",,,,,,,,,",]
 |==================================================================================================================================
-| |SWG |Evidence of Implmentation |Modular Spec |Compliance Test |OGC Template |Public Comment |OAB Review |IPR to OGC |Member Vote
+| |SWG |Evidence of Implementation |Modular Spec |Compliance Test |OGC Template |Public Comment |OAB Review |IPR to OGC |Member Vote
 |Community standard |NR* |Strong |NR* |Partial |Yes |Yes |Yes |Yes or Shared |Yes
 |Full Standard Track |
 |standard |Yes |No |Yes |NR* |Yes |Yes |Yes |Yes |Yes
@@ -32,7 +36,7 @@ There are two possible tracks for proposing and approving candidate standards or
 |==================================================================================================================================
 *NR - Not required.
 
-Community standard: This is a document, developed by communities external to the OGC, such as GeoRSS, that OGC members wish to bring into the OGC process. The key consideration for a Community standard submission is that there is very strong evidence of implementation. At the same time, the community owning the standard may not want to allow normative changes (except for errors) to the document, may not wish to follow the OGC Modular Specification Policy, nor do they wish to develop CITE tests. Please visit Section 9.5 and Annex C to read more about the requirements for submitting a Community standard as well as a checklist of steps in the Community standard submission, review, and approval process.
+Community standard: This is a document, developed by communities external to the OGC, such as GeoRSS, that OGC members wish to bring into the OGC process. The key consideration for a Community standard submission is that there is very strong evidence of implementation. At the same time, the community owning the standard may not want to allow normative changes (except for errors) to the document, may not wish to follow the OGC Modular Specification Policy, nor do they wish to develop CITE tests. Please visit <<policies-for-the-request-for-comment-rfc-process>> and <<annex-c---community-standard>> to read more about the requirements for submitting a Community standard as well as a checklist of steps in the Community standard submission, review, and approval process.
 
 Full OGC standards track, which consists of two possible target levels of standard.
 
@@ -93,7 +97,12 @@ In the RFC process, the submitters agree to the following set of terms and condi
 
 * For a Community standard, work with OGC Staff to develop and submit a justification for submitting a candidate community standard
 * For a Full Standard track submission, work with OGC staff to develop a new SWG Charter or to revise the Charter of an existing SWG.
-* All RFC submissions originating from work done external to the OGC consensus process and then submitted into the OGC for consideration as an OGC standard may require a signed original of the OGC Submission of Technology Form footnote:[If a candidate standard is developed entirely within the OGC process, then a SoT is not required.]. Work with OGC staff to determine if a SoT form is required. This form shall be provided to the OGC prior to the adoption vote.
+
+* All RFC submissions originating from work done external to the OGC consensus process and then submitted into the OGC for consideration as an OGC standard may require a signed original of the OGC Submission of Technology Form. Work with OGC staff to determine if a SoT form is required. This form shall be provided to the OGC prior to the adoption vote.
+--
+NOTE: If a candidate standard is developed entirely within the OGC process, then a SoT is not required.
+--
+
 * The Submission team has reviewed the current Policy Regarding Intellectual Property Rights of OGC and agrees that its submission is being made in full compliance with those Policies.
 * Proprietary and confidential material may not be included in any submission to the OGC.
 * RFC submitters must provide an agreement to grant OGC a non-exclusive, royalty-free, paid-up, worldwide license to copy and distribute their submission to the OGC membership, and, if adopted by OGC, the right to modify, enhance, and make derivative works from the standard and to copy and distribute the standard, modifications, enhancements, and derivative works both inside and outside of the OGC membership.
@@ -187,7 +196,7 @@ For a Full Standard, the submission package shall include:
 * SWG Charter (See below), and
 * Candidate standard document if one exists. For proposed new standard, providing a document is not required.
 
-Documents being submitted as Full Standards shall use the https://portal.opengeospatial.org/files/?artifact_id=56777/[document formatting and content], in common use by the OGC at the time of submission, of standards submitted under the RFC process. There is a detailed https://portal.opengeospatial.org/files/?artifact_id=3244/[guidance document] for using the template.
+Documents being submitted as Full Standards shall follow the document formatting and content provided in <<OGC10176>>, in common use by the OGC at the time of submission, of standards submitted under the RFC process. There is a detailed guidance document (see <<OGC10176>>) for using the template.
 
 Documents being submitted as Community standards do not need to follow the OGC document template for an OGC standard. However, the submission team for a Community standard is strongly encouraged to provide the candidate standard to the OGC using the document template.
 
@@ -203,28 +212,36 @@ See <<swg-charter-approval-and-formation>> on the Policies specific to the forma
 
 At any time in the RFC process the SWG may vote to release a candidate standard for public comment. These interim public comment periods do not require OAB review or OGC Naming Authority review. However, there shall be at a minimum one official 30 day public comment period.
 
-Full standard: Once the SWG determines that the candidate standard is ready for OAB and OGC-NA review and public comment, the SWG shall have a vote to release the document for public review. Upon a simple majority vote by the voting members of the SWG, the candidate standard will be released for a 30-day public comment period. The OAB shall review a candidate standard prior to the actual release for public comment.
+Full standard:: Once the SWG determines that the candidate standard is ready for OAB and OGC-NA review and public comment, the SWG shall have a vote to release the document for public review. Upon a simple majority vote by the voting members of the SWG, the candidate standard will be released for a 30-day public comment period. The OAB shall review a candidate standard prior to the actual release for public comment.
 
-Community standard: The community standard submission team and the TCC must agree that the candidate standard is ready for review and the TCC will submit the candidate standard for internal review by the OAB and OGC-NA.
+Community standard:: The community standard submission team and the TCC must agree that the candidate standard is ready for review and the TCC will submit the candidate standard for internal review by the OAB and OGC-NA.
 
 [[review-by-the-ogc-architecture-board-all]]
 ===== Review by the OGC Architecture Board (All)
 
-Once the SWG or Community standard submission team approves the candidate standard for public comment, the candidate standard is reviewed by the OAB. The OAB has the responsibility to ensure that the RFC submission is relevant in terms of the rationale for how the candidate standard fits into the current adoption plans of the OGC (and/or the current Abstract Specification), for Full Standards compliance with the Modular Specification Policy footnote:[https://portal.opengeospatial.org/files/?artifact_id=34762[_The Specification Model - A Standard for Modular specifications (08-131r3)_]], and how the proposal is consistent footnote:[This information is to be provided in the Community Standard Justification document. A Community standard is not required to align with the current OGC standards baseline or may overlap existing OGC standards functionality.] with the current OGC standards baseline. The candidate standard cannot be released for public comment until it is approved for release by the OAB. The OAB may request changes to be made to the candidate standard and have that document returned to the OAB for further review.
+Once the SWG or Community standard submission team approves the candidate standard for public comment, the candidate standard is reviewed by the OAB. The OAB has the responsibility to ensure that the RFC submission is relevant in terms of the rationale for how the candidate standard fits into the current adoption plans of the OGC (and/or the current Abstract Specification), for Full Standards compliance with the Modular Specification Policy (<<OGCMSP>>) and how the proposal is consistent with the current OGC standards baseline.
+
+NOTE: This information is to be provided in the Community Standard Justification document. A Community standard is not required to align with the current OGC standards baseline or may overlap existing OGC standards functionality.
+
+The candidate standard cannot be released for public comment until it is approved for release by the OAB. The OAB may request changes to be made to the candidate standard and have that document returned to the OAB for further review.
 
 [[review-of-ogc-identifiers-http-uris-etc-by-the-ogc-naming-authority-all]]
 ===== Review of OGC Identifiers (http URIs, etc) by the OGC Naming Authority (All)
 
-Concurrent with the OAB review of the candidate standard, the SWG shall provide a list of all new OGC identifiers specified in the candidate standard to be issued for persistent public OGC resources. This list shall be submitted to the OGC Naming Authority for review. This submission may be done by email. The specific policy is specified in “Policy Directives for Writing and Publishing OGC Standards: TC Decisions”. footnote:[http://portal.opengeospatial.org/files/?artifact_id=40077]
+Concurrent with the OAB review of the candidate standard, the SWG shall provide a list of all new OGC identifiers specified in the candidate standard to be issued for persistent public OGC resources. This list shall be submitted to the OGC Naming Authority for review. This submission may be done by email. The specific policy is specified in “Policy Directives for Writing and Publishing OGC Standards: TC Decisions” (<<OGC06135>>).
 
 The candidate standard document/repository will also be provided to the OGC-NA to ensure that document tags and formatting are consistent with the OGC standard template and suitable for ingestion into the OGC Knowledge Management database.
 
-In order to facilitate the review and to be in compliance with the OGC http URI policy [OGC 06-135 – Directive 21], the editor shall submit the candidate standard’s list of doc footnote:[As specified in OGC 09-046, 09-047, and 09-048 (latest versions) found at http://www.opengeospatial.org/ogc/policies/directives], spec and XML Namespace URIs for OGC-NA review formatted into an Excel spreadsheet or as a Persistent Uniform Resource Locators (PURL) footnote:[http://purl.oclc.org/docs/index.html] configuration document, which is valid according to the `batchPurls.rng` schema.
+In order to facilitate the review and to be in compliance with the OGC HTTP URI policy (<<OGC06135,clause=21>>), the editor shall submit the candidate standard’s list of doc (as specified in the latest versions of <<OGC09046>>, <<OGC09047>>, and <<OGC09048>>), spec and XML Namespace URIs for OGC-NA review formatted into an Excel spreadsheet or as a Persistent Uniform Resource Locators (PURL) (<<PURL>>) configuration document, which is valid according to the `batchPurls.rng` schema.
 
 [[release-for-public-comment-period-all]]
 ===== Release for Public Comment Period (All)
 
-The candidate standard is released for a 30-day public comment period footnote:[The SWG may determine that a longer comment period is required.]. During the RFC comment period, any party (including all classes of OGC members, as well as any non-member of OGC) may send comments on the proposal to OGC Headquarters or to the address announced with the RFC issuance. OGC staff will manage collection of the comments. OGC Communications will insure that the SWG or Community standard submission team membership is informed regarding submitted comments. It is important to note that anyone may make a comment on an outstanding RFC. RFC’s are available to the public, not just members, and are publicized.
+The candidate standard is released for a 30-day public comment period.
+
+NOTE: The SWG may determine that a longer comment period is required.
+
+During the RFC comment period, any party (including all classes of OGC members, as well as any non-member of OGC) may send comments on the proposal to OGC Headquarters or to the address announced with the RFC issuance. OGC staff will manage collection of the comments. OGC Communications will insure that the SWG or Community standard submission team membership is informed regarding submitted comments. It is important to note that anyone may make a comment on an outstanding RFC. RFC’s are available to the public, not just members, and are publicized.
 
 [[review-of-the-received-comments-all]]
 ===== Review of the Received Comments (All)
@@ -274,13 +291,13 @@ In the case where an OGC-approved Best Practice is a profile of an active standa
 
 NOTE: if the Best Practice is a profile combined from multiple standards, then the profile must be advanced as a standard via the normal full standards track process. The single standard to which the profile applies may itself have normative references to other standards; such a situation does not make the profile “combined from multiple standards.”
 
-1.  The submitters of the Best Practice must agree to proceed with the standard adoption process.
-2.  The SWG responsible for the parent standard (i.e., the standard to which the profile applies) must vote to proceed with the standard adoption process per the normal SWG processes and voting rules.
-3.  The candidate standard is reviewed by the OAB and the OGC-NA.
-4.  The candidate standard will be assessed against the same criteria applied to the parent standard. For instance, if the parent standard was approved prior to publication of the Modular Specification, then the candidate standards will not be required to be compliant with the Modular Specification.
-5.  The candidate standard is released for a 30-day simultaneous TC and public request for comment.
-6.  Comments are reviewed and addressed by the submitters to the satisfaction of the TCC.
-7.  The candidate standard is voted upon by the TC and PC per <<vote-to-approve-candidate-standard-all>>. Note that the Best Practice was already approved by the TC and PC, so a presentation to and request to start a vote from the TC will not be required.
+. The submitters of the Best Practice must agree to proceed with the standard adoption process.
+. The SWG responsible for the parent standard (i.e., the standard to which the profile applies) must vote to proceed with the standard adoption process per the normal SWG processes and voting rules.
+. The candidate standard is reviewed by the OAB and the OGC-NA.
+. The candidate standard will be assessed against the same criteria applied to the parent standard. For instance, if the parent standard was approved prior to publication of the Modular Specification, then the candidate standards will not be required to be compliant with the Modular Specification.
+. The candidate standard is released for a 30-day simultaneous TC and public request for comment.
+. Comments are reviewed and addressed by the submitters to the satisfaction of the TCC.
+. The candidate standard is voted upon by the TC and PC per <<vote-to-approve-candidate-standard-all>>. Note that the Best Practice was already approved by the TC and PC, so a presentation to and request to start a vote from the TC will not be required.
 
 [[specific-policies-regarding-abstract-specification-topics]]
 === Specific Policies Regarding Abstract Specification Topics
@@ -312,9 +329,10 @@ There are two categories of potentially unacceptable Abstract Specification chan
 [[authoritative-sdo-documents-as-ogc-abstract-specifications]]
 ==== Authoritative SDO Documents as OGC Abstract Specifications
 
-footnote:[Please refer to the ISO-OGC Terms of Reference for details of the working relationship between the OGC and ISO TC 211 - Geomatics. https://portal.opengeospatial.org/files/?artifact_id=69074[_https://portal.opengeospatial.org/files/?artifact_id=69074_].]
-
 A new AS Topic Volume or a revision to an existing AS Topic volume may be proposed by the OGC members for the case in which the document was created in an Authoritative SDO activity or a joint OGC and Authoritative SDO-developed activity. There are the two cases: A document entirely developed in the Authoritative SDO and then recommended by OGC members to be an Abstract Specification and a document jointly developed by the OGC and Authoritative SDO memberships. Each case is now described.
+
+NOTE: Please refer to the <<ISOOGCTOR>> for details of the working relationship between the OGC and ISO TC 211 - Geomatics.
+
 
 [[authoritative-sdo-standard-as-an-ogc-abstract-specification-topic-volume]]
 ===== Authoritative SDO Standard as an OGC Abstract Specification Topic Volume
@@ -356,9 +374,7 @@ The Editor and the SWG Chair may or may not be the same individual.
 [[change-request-proposals-crp-to-an-ogc-document]]
 === Change Request Proposals (CRP) to an OGC document
 
-At any time, any OGC member or non-member can submit a CRP. A CRP allows for the formal documentation of a proposed change to an existing, adopted OGC standard or abstract specification. The change could be an identified error (see <<corrigendum-errata-changes-to-ogc-standards-full-standard>>), an inconsistency, a requested enhancement, or a major proposed enhancement. Completed CRP’s shall be submitted on-line using the CR submission application on the OGC web site. Submitted CRP’s are catalogued and stored on a publicly accessible site.
-
-The CR App URL is: http://ogc.standardstracker.org/
+At any time, any OGC member or non-member can submit a CRP. A CRP allows for the formal documentation of a proposed change to an existing, adopted OGC standard or abstract specification. The change could be an identified error (see <<corrigendum-errata-changes-to-ogc-standards-full-standard>>), an inconsistency, a requested enhancement, or a major proposed enhancement. Completed CRP’s shall be submitted on-line using the CR submission application on the OGC web site. Submitted CRP’s are catalogued and stored on a publicly accessible site (see <<OGCCRApp>>).
 
 CRP’s are used as the basis for new SWG work items. The SWG will only consider proposed changes and enhancements to an adopted implementation that have been documented using the CRP template.
 
@@ -367,7 +383,7 @@ If a SWG does not exist for a given standard and there are CRP proposals for tha
 [[submission-of-change-request-proposals]]
 ==== Submission of Change Request Proposals
 
-Once a CRP is completed, it shall be submitted to the OGC by posting to the http://ogc.standardstracker.org/[Public Change Request] page. If a CRP is to be discussed during a face to face SWG meeting, such as during a TC meeting, then change requests should be submitted to the CRP archive by the meeting 3-week rule. All CRPs shall be publicly available.
+Once a CRP is completed, it shall be submitted to the OGC by posting to the Public Change Request page (<<OGCCRApp>>). If a CRP is to be discussed during a face to face SWG meeting, such as during a TC meeting, then change requests should be submitted to the CRP archive by the meeting 3-week rule. All CRPs shall be publicly available.
 
 [[evaluation-of-a-change-request-proposal]]
 ==== Evaluation of a Change Request Proposal
@@ -439,17 +455,21 @@ The SWG shall perform the following tasks.
 [[corrigendum-errata-changes-to-ogc-standards-full-standard]]
 === Corrigendum (errata) Changes to OGC Standards (Full Standard)
 
-From time to time, members and the public will discover errors in a published and approved OGC standard. In such cases, a process is required to document and publish the corrections without forming a SWG footnote:[The members may determine that a SWG should be formed to properly discuss the necessary changes to correct the deficiencies. In this case, the SWG Revision P&P will be followed.] and that follows the formal TC review and voting process. Under the corrigendum process, an error (or errors) in a published document discovered after adoption and publication is shown with its correction(s) under a separate sheet (or addendum). This process is very similar to the ISO Technical Corrigendum Process
+From time to time, members and the public will discover errors in a published and approved OGC standard. In such cases, a process is required to document and publish the corrections without forming a SWG and that follows the formal TC review and voting process.
+
+NOTE: The members may determine that a SWG should be formed to properly discuss the necessary changes to correct the deficiencies. In this case, the SWG Revision P&P will be followed.
+
+Under the corrigendum process, an error (or errors) in a published document discovered after adoption and publication is shown with its correction(s) under a separate sheet (or addendum). This process is very similar to the ISO Technical Corrigendum Process.
 
 This process operates as follows.
 
-1.  An identified error is documented and submitted to the OGC using the Corrigendum Proposal (CRP) template. The submitter(s) of the Corrigendum notify the TCC.
-2.  The TCC or designee evaluates to candidate corrigendum to verify that a specific error is being documented.
-3.  The TCC or designee communicates the documented error to the editor/author of the specified standard.
-4.  The editor/author checks the validity of the error and then communicates this information to the OGC membership for comment using standard OGC communications. The reason for the TC broadcast is that there may be many implementations of the standard for which an error has been documented.
-5.  If there is concurrence that the corrigendum documents a valid error, the editor/author writes the corrigendum and submits back to the TCC or his designee.
-6.  The Membership votes to release (or not) the error (deficiency) correction as a corrigendum. A Corrigendum vote will ask if there is any objection to unanimous consent. In order to speed the process, these votes will last for only two weeks and there is no IPR review requirement.
-7.  The corrigendum is published via OGC communications.
+. An identified error is documented and submitted to the OGC using the Corrigendum Proposal (CRP) template. The submitter(s) of the Corrigendum notify the TCC.
+. The TCC or designee evaluates to candidate corrigendum to verify that a specific error is being documented.
+. The TCC or designee communicates the documented error to the editor/author of the specified standard.
+. The editor/author checks the validity of the error and then communicates this information to the OGC membership for comment using standard OGC communications. The reason for the TC broadcast is that there may be many implementations of the standard for which an error has been documented.
+. If there is concurrence that the corrigendum documents a valid error, the editor/author writes the corrigendum and submits back to the TCC or his designee.
+. The Membership votes to release (or not) the error (deficiency) correction as a corrigendum. A Corrigendum vote will ask if there is any objection to unanimous consent. In order to speed the process, these votes will last for only two weeks and there is no IPR review requirement.
+. The corrigendum is published via OGC communications.
 
 [[backwards-compatibility-full-standard]]
 === Backwards Compatibility (Full Standard)
