--- a/sections/ac-community.adoc
+++ b/sections/ac-community.adoc
@@ -1,21 +1,21 @@
 
 [[annex-c---community-standard]]
 [appendix,obligation=informative]
-== Annex C - Community Standard
+== Community Standard
 
 [[c.1-qualification-checklist-community-standards]]
-=== C.1 Qualification Checklist – Community Standards
+=== Qualification Checklist – Community Standards
 
 The following is a list of questions that the submission team needs to answer in the affirmative prior to submitting community specification into the OGC.
 
-1.  Does the submission team understand that copyright and intellectual property (PR) shall be vested or shared with the OGC? Note: If the plan is to move the document to Provisional or Full standard status, all IP shall be vested to the OGC.
-2.  Does the submission team understand that if the candidate standard is approved as an OGC standard that life-cycle governance shall be vested with the OGC[1]?
-3.  Is there sufficient evidence of broad implementation?
-4.  Is the candidate standard unencumbered by any 3^rd^ party intellectual property?
-5.  Is there method to determine compliance with the community standard? This could be an abstract test suite, a compliance test framework, clearly defined requirements, or other text in the document that describes compliance.
+. Does the submission team understand that copyright and intellectual property (PR) shall be vested or shared with the OGC? Note: If the plan is to move the document to Provisional or Full standard status, all IP shall be vested to the OGC.
+. Does the submission team understand that if the candidate standard is approved as an OGC standard that life-cycle governance shall be vested with the OGC[1]?
+. Is there sufficient evidence of broad implementation?
+. Is the candidate standard unencumbered by any 3^rd^ party intellectual property?
+. Is there method to determine compliance with the community standard? This could be an abstract test suite, a compliance test framework, clearly defined requirements, or other text in the document that describes compliance.
 
 [[c.2-community-standard-process-checklist]]
-=== C.2 Community Standard Process Checklist
+=== Community Standard Process Checklist
 
 [cols=",",options="header",]
 |========================================================================================================================
@@ -60,5 +60,5 @@ The following is a list of questions that the submission team needs to answer in
 |Done. Congratulations!! |
 |========================================================================================================================
 
-[1] Please note that for external standards brought into the OGC, such as KML, the external community is still able to develop, test, and document new functionality and changes to the standard. This is per the OGC Best Practice “KML – Standard Development Best Practices” [OGC 08-125]. Once the external community is ready, these changes shall be documented and submitted into the OGC using the OGC Change Request Process
+NOTE: For external standards brought into the OGC, such as KML, the external community is still able to develop, test, and document new functionality and changes to the standard. This is per <<OGC08125>>. Once the external community is ready, these changes shall be documented and submitted into the OGC using the OGC Change Request Process.
 
